--- a/compose.yaml
+++ b/compose.yaml
@@ -14,8 +14,9 @@ services:
       dockerfile: Dockerfile
     ports:
       - 8000:8000
+      - 5678:5678
     volumes:
-      - C:/phi/:/app/models/phi
+      - D:/models/:/app/models/
     command: /bin/sh -c "chmod -R 777 . && uvicorn model_os:app --reload --host 0.0.0.0 --port 8000"
     deploy:
       resources:
