--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,10 @@
-fastapi
-pydantic
-uvicorn
-requests
-pylint
-pillow
-transformers
-torch
-accelerate
-torchvision
-pydub
-debugpy
-numpy
-librosa
-soundfile
+fastapi==0.68.0
+uvicorn==0.15.0
+httpx==0.23.0
+pydantic==1.8.2
+python-multipart==0.0.5
+pillow==8.3.2
+transformers==4.11.3
+torch==1.9.0
+numpy==1.21.2
+pydub==0.25.1
