downgrading ubuntu to 22.04

--- a/Dockerfile.whisper
+++ b/Dockerfile.whisper
@@ -31,12 +31,13 @@ RUN distribution=$(lsb_release -cs) && \
     tee /usr/share/keyrings/nvidia-container-toolkit-keyring.gpg
 
 # Update package lists and install NVIDIA Container Toolkit
-RUN apt-get update && \
-    apt-get install -y \
-    nvidia-container-toolkit
+# RUN apt-get update && #\
+    # apt-get install -y \
+    # nvidia-driver-560 \
+    # nvidia-container-toolkit
 
 # Configure Docker to use the NVIDIA runtime
-RUN nvidia-ctk runtime configure --runtime=docker
+# RUN nvidia-ctk runtime configure --runtime=docker
 
 # Make port 8001 available to the world outside this container
 EXPOSE 8001
