--- a/webhook_listener/Dockerfile
+++ b/webhook_listener/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.9-slim
 WORKDIR /app
 
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 COPY webhook_listener.py .
 
