--- a/whisper_service/Dockerfile.whisper
+++ b/whisper_service/Dockerfile.whisper
@@ -21,7 +21,7 @@ WORKDIR /app
 COPY . /app
 
 # Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 # Add the NVIDIA package repositories and install the GPG key
 RUN distribution=$(lsb_release -cs) && \
