--- a/phi_service/Dockerfile.phi
+++ b/phi_service/Dockerfile.phi
@@ -1,27 +1,30 @@
 # syntax=docker/dockerfile:1
 
-ARG PYTHON_VERSION=3.12.3
+ARG PYTHON_VERSION=3.12.3-slim
 
 FROM nvidia/cuda:12.1.1-base-ubuntu22.04 as base
+
+# Prevents Python from writing pyc files.
+ENV PYTHONDONTWRITEBYTECODE=1
+# Keeps Python from buffering stdout and stderr to avoid situations where
+# the application crashes without emitting any logs due to buffering.
+ENV PYTHONUNBUFFERED=1
+ENV PYTHONPATH=app/
+
+WORKDIR /app
 
 RUN apt-get update && \
     apt-get install -y python3-pip python3-dev python-is-python3 lsb-release && \
     rm -rf /var/lib/apt/lists/*
 
-# Prevents Python from writing pyc files.
-ENV PYTHONDONTWRITEBYTECODE=1
-
-# Keeps Python from buffering stdout and stderr to avoid situations where
-# the application crashes without emitting any logs due to buffering.
-ENV PYTHONUNBUFFERED=1
-
-WORKDIR /app
-
-# Copy the current directory contents into the container at /app
-COPY . /app
+# Install any needed packages specified in requirements.txt
+COPY requirements.txt /app/
 
 # Install any needed packages specified in requirements.txt
 RUN pip install -r requirements.txt
+
+# Copy the current directory contents into the container at /app
+COPY phi_service/ /app/phi_service/
 
 # Add the NVIDIA package repositories and install the GPG key
 RUN distribution=$(lsb_release -cs) && \
@@ -46,4 +49,4 @@ EXPOSE 8000
 ENV MODEL_NAME=PHI
 
 # Run app.py when the container launches
-CMD ["python", "phi_service.py"]
+CMD ["uvicorn", "phi_service.phi_service:app", "--host", "0.0.0.0", "--port", "8000"]
